tests/data/errors/corner_cases/input.py

x = 1

y = 
x = 3
x

if x:
	x =
x

y = 3
if y:
	y = 
elif y:
	y = 
if y:
	y = 
y

if y:
	y = 
	if y:
		a =
	b =
	c =
d =

if x:
	x
'''
x
'''
y =
x =
'''
'''
x =

